istio-routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    korifi.cloudfoundry.org/app-guid: 9593b49b-9789-45c1-8574-747279977dad
  type: ClusterIP
